apps/base/wallabag/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wallabag
  namespace: wallabag
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wallabag.joesabbagh.com`)
      kind: Rule
      services:
        - name: wallabag
          port: 80
  tls:
    secretName: wallabag-tls
